UI and documentation improvements